--- a/public/error.html
+++ b/public/error.html
@@ -22,7 +22,9 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div>
+        <h1>Error - sorry the request was not found</h1>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
